apps/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: apps
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: main
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: order-system
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          # shop service api
          - path: /
            pathType: Prefix
            backend:
              service:
                name: 
                port:
                  number: 8080
